force-app/main/default/objects/Lead/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal Openday</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Inscripción</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>FFVV Temuco</fullName>
            </value>
            <value>
                <fullName>FFVV Iquique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>