force-app/main/default/objects/Lead/fields/Cantidad_de_minutos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_minutos__c</fullName>
    <formula>(CreatedDate - Primer_Contacto_Lead__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de minutos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>