force-app/main/default/objects/Lead/fields/Cliente_Contactado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Contactado__c</fullName>
    <label>Cliente Contactado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>