force-app/main/default/objects/Lead/fields/Cliente_creado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_creado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente creado</label>
    <type>Checkbox</type>
</CustomField>