force-app/main/default/objects/Lead/fields/Comuna_de_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Comuna_de_Despacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comuna de Despacho</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>