force-app/main/default/objects/Lead/fields/Comuna_Web__c.field-meta.xml
<CustomField>
    <fullName>Comuna_Web__c</fullName>
    <label>Comuna Web</label>
    <type>TextArea</type>
</CustomField>