force-app/main/default/objects/Lead/fields/Comunas__c.field-meta.xml
<CustomField>
    <fullName>Comunas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comuna</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Candidatos (Comuna)</relationshipLabel>
    <relationshipName>Candidatos1</relationshipName>
    <type>Lookup</type>
</CustomField>