force-app/main/default/objects/Lead/fields/Datos_validados__c.field-meta.xml
<CustomField>
    <fullName>Datos_validados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datos validados</label>
    <type>Checkbox</type>
</CustomField>