force-app/main/default/objects/Lead/fields/Detalle_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_Contacto__c</fullName>
    <label>Detalle de Contacto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>