force-app/main/default/objects/Lead/fields/Detalle_de_gestion_de_asesor__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_gestion_de_asesor__c</fullName>
    <label>Detalle de gestión de asesor</label>
    <type>TextArea</type>
</CustomField>