force-app/main/default/objects/Lead/fields/Direcci_n_Texto__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_Texto__c</fullName>
    <formula>IF(NOT(ISBLANK(Street)), Street, &quot;&quot;) &amp; 
IF(NOT(ISBLANK(City)), &quot;\n&quot; &amp; City, &quot;&quot;) &amp; 
IF(NOT(ISBLANK(State)), &quot;\n&quot; &amp; State, &quot;&quot;) &amp; 
IF(NOT(ISBLANK(PostalCode)), &quot;\n&quot; &amp; PostalCode, &quot;&quot;) &amp; 
IF(NOT(ISBLANK(Country)), &quot;\n&quot; &amp; Country, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Texto</label>
    <type>Text</type>
</CustomField>