force-app/main/default/objects/Lead/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección de Facturación</label>
    <type>Address</type>
</CustomField>