force-app/main/default/objects/Lead/fields/Direccion_de_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_Despacho__c</fullName>
    <label>Dirección de Despacho</label>
    <type>Address</type>
</CustomField>