force-app/main/default/objects/Lead/fields/Direccion_web__c.field-meta.xml
<CustomField>
    <fullName>Direccion_web__c</fullName>
    <label>Dirección web</label>
    <type>TextArea</type>
</CustomField>