force-app/main/default/objects/Lead/fields/Email_Invitado_1__c.field-meta.xml
<CustomField>
    <fullName>Email_Invitado_1__c</fullName>
    <label>Email Invitado 1</label>
    <type>Email</type>
</CustomField>