force-app/main/default/objects/Lead/fields/Email_Invitado_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Invitado_2__c</fullName>
    <label>Email Invitado 2</label>
    <type>Email</type>
</CustomField>