force-app/main/default/objects/Lead/fields/Email_Invitado_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Invitado_3__c</fullName>
    <label>Email Invitado 3</label>
    <type>Email</type>
</CustomField>