force-app/main/default/objects/Lead/fields/Es_Parte_de_un_Holding__c.field-meta.xml
<CustomField>
    <fullName>Es_Parte_de_un_Holding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Parte de un Holding</label>
    <type>Checkbox</type>
</CustomField>