force-app/main/default/objects/Lead/fields/Fecha_Probable_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Probable_de_Cierre__c</fullName>
    <label>Fecha Probable de Cierre</label>
    <type>Date</type>
</CustomField>