force-app/main/default/objects/Lead/fields/Fecha_Probable_de_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Probable_de_Visita__c</fullName>
    <label>Fecha Probable de Visita</label>
    <type>DateTime</type>
</CustomField>