force-app/main/default/objects/Lead/fields/Fecha_Reasignacion_Owner__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reasignacion_Owner__c</fullName>
    <label>Fecha Reasignación Owner</label>
    <type>DateTime</type>
</CustomField>