force-app/main/default/objects/Lead/fields/FS_Openday__c.field-meta.xml
<CustomField>
    <fullName>FS_Openday__c</fullName>
    <label>FS Openday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>