force-app/main/default/objects/Lead/fields/Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Gerencia__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>102 - Cadenas</fullName>
            </value>
            <value>
                <fullName>103 - Catering</fullName>
            </value>
            <value>
                <fullName>105 - Institucional</fullName>
            </value>
            <value>
                <fullName>106 - Mayorista</fullName>
            </value>
            <value>
                <fullName>107 - Personas</fullName>
            </value>
            <value>
                <fullName>112 - Industria</fullName>
            </value>
            <value>
                <fullName>113 - Otros</fullName>
            </value>
            <value>
                <fullName>115 - Punto a Punto</fullName>
            </value>
            <value>
                <fullName>Cadenas</fullName>
                <isActive>false</isActive>
                <label>Cadenas</label>
            </value>
            <value>
                <fullName>Catering</fullName>
                <isActive>false</isActive>
                <label>Catering</label>
            </value>
            <value>
                <fullName>Industria</fullName>
                <isActive>false</isActive>
                <label>Industria</label>
            </value>
            <value>
                <fullName>Institucional</fullName>
                <isActive>false</isActive>
                <label>Institucional</label>
            </value>
            <value>
                <fullName>Mayorista</fullName>
                <isActive>false</isActive>
                <label>Mayorista</label>
            </value>
            <value>
                <fullName>Otros</fullName>
                <isActive>false</isActive>
                <label>Otros</label>
            </value>
            <value>
                <fullName>Personas</fullName>
                <isActive>false</isActive>
                <label>Personas</label>
            </value>
            <value>
                <fullName>Punto a Punto</fullName>
                <isActive>false</isActive>
                <label>Punto a Punto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>