force-app/main/default/objects/Lead/fields/Grupo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Cliente__c</fullName>
    <label>Especialidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A0 - Carnes</fullName>
            </value>
            <value>
                <fullName>A1 - Pollo</fullName>
            </value>
            <value>
                <fullName>A2 - Hamburguesa</fullName>
            </value>
            <value>
                <fullName>A3 - Sándwich y Hotdog</fullName>
            </value>
            <value>
                <fullName>A4 - Pescados y Mariscos</fullName>
            </value>
            <value>
                <fullName>A5 - Pastelería</fullName>
            </value>
            <value>
                <fullName>A6 - Panadería</fullName>
            </value>
            <value>
                <fullName>A7 - Empanadas</fullName>
            </value>
            <value>
                <fullName>A8 - Pizza</fullName>
            </value>
            <value>
                <fullName>A9 - Cafetería</fullName>
            </value>
            <value>
                <fullName>B0 - Heladería</fullName>
            </value>
            <value>
                <fullName>B1 - Pastas</fullName>
            </value>
            <value>
                <fullName>B2 - Internacional</fullName>
            </value>
            <value>
                <fullName>B3 - Peruano</fullName>
            </value>
            <value>
                <fullName>B4 - Español</fullName>
            </value>
            <value>
                <fullName>B5 - Americano</fullName>
            </value>
            <value>
                <fullName>B6 - Chino</fullName>
            </value>
            <value>
                <fullName>B7 - Sushi</fullName>
            </value>
            <value>
                <fullName>B8 - Almacén / Tienda</fullName>
            </value>
            <value>
                <fullName>B9 - Naturista</fullName>
            </value>
            <value>
                <fullName>C0 - Hotel</fullName>
            </value>
            <value>
                <fullName>C1 - Banquetería</fullName>
            </value>
            <value>
                <fullName>C2 - Comida Casera / Menú</fullName>
            </value>
            <value>
                <fullName>C3 - Servicios Alimentaci</fullName>
            </value>
            <value>
                <fullName>C4 - Otros</fullName>
            </value>
            <value>
                <fullName>C5 - Petroleras</fullName>
            </value>
            <value>
                <fullName>C6 - DIST.Y MAYORISTAS</fullName>
            </value>
            <value>
                <fullName>C7 - CLIENTE BOLETA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>