force-app/main/default/objects/Lead/fields/Horario_de_Recepci_n_Max__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_Recepci_n_Max__c</fullName>
    <defaultValue>TIMEVALUE(&quot;07:00:00.000&quot;)</defaultValue>
    <label>Horario de Recepción Max</label>
    <type>Time</type>
</CustomField>