force-app/main/default/objects/Lead/fields/Horario_de_Recepci_n_Min__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_Recepci_n_Min__c</fullName>
    <defaultValue>TIMEVALUE(&quot;07:00:00.000&quot;)</defaultValue>
    <label>Horario de Recepción Min</label>
    <type>Time</type>
</CustomField>