force-app/main/default/objects/Lead/fields/Horario_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Horario_Disponible__c</fullName>
    <label>Horario Disponible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:00 a 10:20</fullName>
            </value>
            <value>
                <fullName>10:20 a 10:40</fullName>
            </value>
            <value>
                <fullName>10:40 a 11:00</fullName>
            </value>
            <value>
                <fullName>11:00 a 11:20</fullName>
            </value>
            <value>
                <fullName>11:20 a 11:40</fullName>
            </value>
            <value>
                <fullName>11:40 a 12:00</fullName>
            </value>
            <value>
                <fullName>12:00 a 12:30</fullName>
            </value>
            <value>
                <fullName>10:00 a 10:30</fullName>
            </value>
            <value>
                <fullName>10:30 a 11:00</fullName>
            </value>
            <value>
                <fullName>11:00 a 11:30</fullName>
            </value>
            <value>
                <fullName>11:30 a 12:00</fullName>
            </value>
            <value>
                <fullName>12:30 a 13:00</fullName>
                <isActive>false</isActive>
                <label>12:30 a 13:00</label>
            </value>
            <value>
                <fullName>13:00 a 13:30</fullName>
                <isActive>false</isActive>
                <label>13:00 a 13:30</label>
            </value>
            <value>
                <fullName>13:30 a 14:00</fullName>
                <isActive>false</isActive>
                <label>13:30 a 14:00</label>
            </value>
            <value>
                <fullName>14:00</fullName>
                <isActive>false</isActive>
                <label>14:00</label>
            </value>
            <value>
                <fullName>14:00 a 14:30</fullName>
                <isActive>false</isActive>
                <label>14:00 a 14:30</label>
            </value>
            <value>
                <fullName>14:30 a 15:00</fullName>
                <isActive>false</isActive>
                <label>14:30 a 15:00</label>
            </value>
            <value>
                <fullName>15:00 a 15:30</fullName>
                <isActive>false</isActive>
                <label>15:00 a 15:30</label>
            </value>
            <value>
                <fullName>15:30 a 16:00</fullName>
                <isActive>false</isActive>
                <label>15:30 a 16:00</label>
            </value>
            <value>
                <fullName>16:30 a 17:00</fullName>
                <isActive>false</isActive>
                <label>16:30 a 17:00</label>
            </value>
            <value>
                <fullName>17:30 a 18:00</fullName>
                <isActive>false</isActive>
                <label>17:30 a 18:00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>