force-app/main/default/objects/Lead/fields/Horario_Meta__c.field-meta.xml
<CustomField>
    <fullName>Horario_Meta__c</fullName>
    <label>Horario Meta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>