force-app/main/default/objects/Lead/fields/Lead_de_calidad__c.field-meta.xml
<CustomField>
    <fullName>Lead_de_calidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead de calidad</label>
    <type>Checkbox</type>
</CustomField>