force-app/main/default/objects/Lead/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Uscheese</fullName>
            </value>
            <value>
                <fullName>Expocafe</fullName>
            </value>
            <value>
                <fullName>Chefworks</fullName>
            </value>
            <value>
                <fullName>Web Hablemos</fullName>
            </value>
            <value>
                <fullName>Web Contactanos</fullName>
            </value>
            <value>
                <fullName>Catalogo web</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>Terreno</fullName>
            </value>
            <value>
                <fullName>Lead CSM</fullName>
            </value>
            <value>
                <fullName>OpenDay</fullName>
            </value>
            <value>
                <fullName>Carozzi</fullName>
            </value>
            <value>
                <fullName>OpenDayTemuco</fullName>
            </value>
            <value>
                <fullName>Lead Meta</fullName>
            </value>
            <value>
                <fullName>Foodservice</fullName>
            </value>
            <value>
                <fullName>OpenDayIquique</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>