force-app/main/default/objects/Lead/fields/Lista_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Lista_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista Relacionada</label>
    <referenceTo>Negocio_Gastronomico__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>