force-app/main/default/objects/Lead/fields/Nombre_de_asesor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_asesor__c</fullName>
    <label>Nombre de asesor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>