force-app/main/default/objects/Lead/fields/Nombre_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Contacto__c</fullName>
    <label>Nombre de Contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>