force-app/main/default/objects/Lead/fields/Numero_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Registro__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Numero de Registro</label>
    <type>AutoNumber</type>
</CustomField>