force-app/main/default/objects/Lead/fields/Observacion__c.field-meta.xml
<CustomField>
    <fullName>Observacion__c</fullName>
    <label>Observación</label>
    <type>TextArea</type>
</CustomField>