force-app/main/default/objects/Lead/fields/Primer_Contacto_Lead__c.field-meta.xml
<CustomField>
    <fullName>Primer_Contacto_Lead__c</fullName>
    <label>Primer Contacto Lead</label>
    <type>DateTime</type>
</CustomField>