force-app/main/default/objects/Lead/fields/Proximos_Pasos__c.field-meta.xml
<CustomField>
    <fullName>Proximos_Pasos__c</fullName>
    <description>Próximos pasos y fechas</description>
    <label>Próximos Pasos</label>
    <length>150</length>
    <type>Text</type>
</CustomField>