force-app/main/default/objects/Lead/fields/QR_Scan_Count_c__c.field-meta.xml
<CustomField>
    <fullName>QR_Scan_Count_c__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR_Scan_Count__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>