force-app/main/default/objects/Lead/fields/Que_esta_Buscarndo__c.field-meta.xml
<CustomField>
    <fullName>Que_esta_Buscarndo__c</fullName>
    <label>¿Que estás buscando?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>