force-app/main/default/objects/Lead/fields/Raz_n_Social__c.field-meta.xml
<CustomField>
    <fullName>Raz_n_Social__c</fullName>
    <label>Razón Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>