force-app/main/default/objects/Lead/fields/Regi_n__c.field-meta.xml
<CustomField>
    <fullName>Regi_n__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Iquique</fullName>
            </value>
            <value>
                <fullName>02 - Antofagasta</fullName>
            </value>
            <value>
                <fullName>03 - Copiapó</fullName>
            </value>
            <value>
                <fullName>04 - La Serena</fullName>
            </value>
            <value>
                <fullName>05 - Valparaíso</fullName>
            </value>
            <value>
                <fullName>06 - Rancagua</fullName>
            </value>
            <value>
                <fullName>07 - Talca</fullName>
            </value>
            <value>
                <fullName>08 - Concepción</fullName>
            </value>
            <value>
                <fullName>09 - Temuco</fullName>
            </value>
            <value>
                <fullName>10 - Puerto Montt</fullName>
            </value>
            <value>
                <fullName>11 - Coyhaique</fullName>
            </value>
            <value>
                <fullName>12 - Punta Arenas</fullName>
            </value>
            <value>
                <fullName>13 - Región Metropolitana</fullName>
            </value>
            <value>
                <fullName>14 - Los Ríos</fullName>
            </value>
            <value>
                <fullName>15 - Arica</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
            <value>
                <fullName>--Seleccione--</fullName>
                <isActive>false</isActive>
                <label>--Seleccione--</label>
            </value>
            <value>
                <fullName>Region de Atacama</fullName>
                <isActive>false</isActive>
                <label>Region de Atacama</label>
            </value>
            <value>
                <fullName>Region de Los Rios</fullName>
                <isActive>false</isActive>
                <label>Region de Los Rios</label>
            </value>
            <value>
                <fullName>Región Metropolitana</fullName>
                <isActive>false</isActive>
                <label>Región Metropolitana</label>
            </value>
            <value>
                <fullName>Región de Antofagasta</fullName>
                <isActive>false</isActive>
                <label>Región de Antofagasta</label>
            </value>
            <value>
                <fullName>Región de Arica y Parinacota</fullName>
                <isActive>false</isActive>
                <label>Región de Arica y Parinacota</label>
            </value>
            <value>
                <fullName>Región de Atacama</fullName>
                <isActive>false</isActive>
                <label>Región de Atacama</label>
            </value>
            <value>
                <fullName>Región de Aysén</fullName>
                <isActive>false</isActive>
                <label>Región de Aysén</label>
            </value>
            <value>
                <fullName>Región de Coquimbo</fullName>
                <isActive>false</isActive>
                <label>Región de Coquimbo</label>
            </value>
            <value>
                <fullName>Región de La Araucanía</fullName>
                <isActive>false</isActive>
                <label>Región de La Araucanía</label>
            </value>
            <value>
                <fullName>Región de Los Lagos</fullName>
                <isActive>false</isActive>
                <label>Región de Los Lagos</label>
            </value>
            <value>
                <fullName>Región de Los Ríos</fullName>
                <isActive>false</isActive>
                <label>Región de Los Ríos</label>
            </value>
            <value>
                <fullName>Región de Magallanes</fullName>
                <isActive>false</isActive>
                <label>Región de Magallanes</label>
            </value>
            <value>
                <fullName>Región de O’Higgins</fullName>
                <isActive>false</isActive>
                <label>Región de O’Higgins</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>